css/hero-unit.css
/*
 * Styles for hero unit paragraph
 *
 */

.paragraph.paragraph--type--hero-unit, .paragraph.paragraph--type--ucb-article-hero{
  font-size: 120%;
  margin-bottom: 1em;
}

.paragraph.paragraph--type--ucb-article-hero p {
  font-size: 125%;
}

.paragraph.paragraph--type--hero-unit.size-large, .paragraph.paragraph--type--ucb-article-hero {
  padding: 100px 2rem;
}

.paragraph.paragraph--type--hero-unit.size-large h2, .paragraph.paragraph--type--ucb-article-hero.size-large h2 {
  font-size: 250%;
}

.paragraph.paragraph--type--hero-unit.size-medium {
  padding: 2rem;
}

.paragraph.paragraph--type--hero-unit.size-small {
  padding: 1rem;
  font-size: initial;
}

.ucb-overlay-dark {
  background-color: rgba(20, 20, 20, 0.5);
  background-blend-mode: overlay;
}

.ucb-overlay-light {
  background-color: rgba(200, 200, 200, 0.7);
  background-blend-mode: overlay;
}

.paragraph.paragraph--type--hero-unit .ucb-hero-unit-content {
  position: relative;
  z-index: 0;
}

.ucb-hero-unit-video-wrapper {
  position: absolute;
  display: block;
}

.ucb-hero-unit-video-player-wrapper {
  position: relative;
  display: block;
  overflow: hidden;
}

.ucb-hero-unit-video-wrapper[hidden] {
  display: none;
}

.paragraph.paragraph--type--hero-unit.size-large .ucb-hero-unit-video-wrapper, .paragraph.paragraph--type--hero-unit.size-large {
  margin-top: -100px;
  margin-left: -2rem;
}

.paragraph.paragraph--type--hero-unit.size-medium .ucb-hero-unit-video-wrapper {
  margin-top: -2rem;
  margin-left: -2rem;
}

.paragraph.paragraph--type--hero-unit.size-small .ucb-hero-unit-video-wrapper {
  margin-top: -1rem;
  margin-left: -1rem;
}

.ucb-hero-unit-video-controls-wrapper {
  position: absolute;
  bottom: 0;
  z-index: 15;
}

.ucb-hero-unit-video-control-button {
  position: relative;
  display: inline-block;
  width: 1em;
  height: 1em;
  margin: .5em
}

